--- a/app/views/add-web.html
+++ b/app/views/add-web.html
@@ -171,26 +171,26 @@
                         </div>
                         <div class="form-group">
                             <label>Purpose *</label>
-                            <textarea type="text" name="email" class="form-control" rows="4" required="required"></textarea>
+                            <textarea type="text" name="purpose" class="form-control" rows="4" required="required"></textarea>
                         </div>
                         <div class="form-group">
                             <label>Url *</label>
-                            <input type="text" class="form-control" required="required">
+                            <input type="text" name="url" class="form-control" required="required">
                         </div>
 
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label>Scenario *</label>
-                            <input type="number" class="form-control" required="required">
+                            <input type="number" name="scenario" class="form-control" required="required">
                         </div>
                         <div class="form-group">
                             <label>Version *</label>
-                            <input type="number" name="subject" class="form-control" required="required">
+                            <input type="number" name="version" class="form-control" required="required">
                         </div>
                         <div class="form-group">
                             <label>Root_Service *</label>
-                            <input name="number" id="message" required="required" class="form-control" rows="8">
+                            <input name="rootService" id="message" required="required" class="form-control" rows="8">
                         </div>
                     </div>
                     <div class="col-sm-5">
