--- a/app/views/addWeb.scala.html
+++ b/app/views/addWeb.scala.html
@@ -1,3 +1,5 @@
+@(climateServiceForm: play.data.Form[ClimateService])
+@import helper._
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -160,7 +162,13 @@
             </div>
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display:none"></div>
-                <form id="main-contact-form" style= "color:#ffffff" class="contact-form" name="contact-form" method="post" action="climate/addClimateService">
+                @form(routes.ClimateServiceController.addClimateService){
+                    <!--@inputText(climateServiceForm("name"), '_label -> "Name *")
+                    @inputText(climateServiceForm("purpose"), '_label -> "Purpose *")
+                    @inputText(climateServiceForm("url"), '_label -> "Url *")
+                    @inputText(climateServiceForm("scenario"), '_label -> "Scenario *")
+                    @inputText(climateServiceForm("version"), '_label -> "Version *")
+                    @inputText(climateServiceForm("rootService"), '_label -> "Root_Service *")-->
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
                             <label>Name * (Please DO NOT contain spaces)</label>
@@ -168,26 +176,60 @@
                         </div>
                         <div class="form-group">
                             <label>Purpose *</label>
-                            <textarea type="text" name="email" class="form-control" rows="4" required="required"></textarea>
+                            <textarea type="text" name="purpose" class="form-control" rows="4" required="required"></textarea>
                         </div>
                         <div class="form-group">
                             <label>Url *</label>
-                            <input type="text" class="form-control" required="required">
+                            <input type="text" name="url" class="form-control" required="required">
                         </div>
 
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
                             <label>Scenario *</label>
-                            <input type="number" class="form-control" required="required">
+                            <input type="number" name="scenario" class="form-control" required="required">
                         </div>
                         <div class="form-group">
                             <label>Version *</label>
-                            <input type="number" name="subject" class="form-control" required="required">
+                            <input type="number" name="version" class="form-control" required="required">
                         </div>
                         <div class="form-group">
                             <label>Root_Service *</label>
-                            <input name="number" id="message" required="required" class="form-control" rows="8">
+                            <input name="rootService" id="rootService" required="required" class="form-control" rows="8">
+                        </div>
+                    </div>
+                    <button type="submit" name="submit" class="btn btn-info btn-lg" required="required">Add a service</button>
+                    <button type="reset" name="reset" class="btn btn-warning btn-lg" required="required">Reset</button>
+                }
+                <!--
+                <form id="main-contact-form" style= "color:#ffffff" class="contact-form" name="contact-form" method="POST" action="/climate/addClimateService">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="form-group">
+                            <label>Name * (Please DO NOT contain spaces)</label>
+                            <input type="text" name="name" class="form-control"  required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Purpose *</label>
+                            <textarea type="text" name="purpose" class="form-control" rows="4" required="required"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Url *</label>
+                            <input type="text" name="url" class="form-control" required="required">
+                        </div>
+
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label>Scenario *</label>
+                            <input type="number" name="scenario" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Version *</label>
+                            <input type="number" name="version" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Root_Service *</label>
+                            <input name="rootService" id="rootService" required="required" class="form-control" rows="8">
                         </div>
                     </div>
                     <div class="col-sm-5">
@@ -197,6 +239,7 @@
                         </div>
                     </div>
                 </form> 
+            -->
             </div><!--/.row-->
         </div><!--/.container-->
     </section><!--/#contact-page-->
